feat: allow to send different email according tenants status and apartSharing type